--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:mysql://${DB_HOST_PORT}/blog
+spring.datasource.username=root
+spring.datasource.password=150120
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
