--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://${DB_HOST_PORT}/blog
+spring.datasource.url=jdbc:mysql://${DB_HOST_PORT}/shopbangiayuimy
 spring.datasource.username=root
 spring.datasource.password=150120
 
